deployment/ingress/logging-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logginglb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - 
            # host: elasticsearch.example.com
            path: /elasticsearch
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-master
                port:
                  number: 9200
          - # host: kibana.example.com
            path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
