deployment/ingress/metrics-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metricslb
  namespace: metrics
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - 
            # host: www.example.com
            path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
          - 
            # host: www.example.com
            path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
